fixed edit button spacing

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ button:hover {
   background-color: #9bd8a4;
   border-radius: 15px;
 }
+
 li {
   padding: 10px 10px;
   list-style-type: none;
@@ -51,8 +52,6 @@ li {
 .main-header button {
   font-size: 2em;
 }
-
-
 
 .title {
   display: flex;
@@ -158,3 +157,12 @@ li {
   text-decoration: line-through;
 }
 
+.linkItem {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.listDisplay ul {
+  padding-left: 20px
+}
